refactor: 更改项目结构